--- a/styles/scss/blocks/radio.scss
+++ b/styles/scss/blocks/radio.scss
@@ -3,14 +3,18 @@
     cursor: pointer;
     align-items: center;
     user-select: none;
-    margin-right: 15px;
+    margin-right: rem(15px);
+
+    @include phones {
+        margin-bottom: rem(10px);
+    }
 
     &--checkbox {
        .radio__visible {
-           border-radius: 5px;
+           border-radius: rem(5px);
 
            &::before {
-            background: url(../../../img/icons/tick.png) center center no-repeat;
+            background: url(../../../img/icons/tick.svg) center center no-repeat;
         }
        } 
     }
@@ -27,17 +31,17 @@
 }
 
 .radio__visible {
-    width: 25px;
-    height: 25px;
+    width: rem(25px);
+    height: rem(25px);
     position: relative;
     border-radius: 50%;
     background: #fff;
-    margin-right: 10px;
+    margin-right: rem(10px);
 
     &::before {
         content: "";
-        width: 13px;
-        height: 13px;
+        width: rem(13px);
+        height: rem(13px);
         border-radius: 50%;
         background: #FEDB3F;
         position: absolute;
