--- a/styles/scss/blocks/form.scss
+++ b/styles/scss/blocks/form.scss
@@ -18,6 +18,10 @@
         flex-direction: column;
         padding: 0 16%;
     }
+
+    @include phones {
+        padding: 0;
+    }
 }
 
 .form__col {
@@ -84,6 +88,10 @@
     display: flex;
     flex-wrap: wrap;
     margin-bottom: rem(20px);
+
+    @include phones {
+        justify-content: center;
+    }
 }
 
 .form__controls-indent {
