--- a/styles/scss/blocks/header.scss
+++ b/styles/scss/blocks/header.scss
@@ -2,13 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding-top: 24px;
-    margin-bottom: 65px;
+    padding-top: rem(24px);
+    margin-bottom: rem(65px);
 }
 
 .nav {
-    margin: 0 30px;
-    padding-top: 5px;
+    margin: 0 rem(30px);
+    padding-top: rem(5px);
 
     @include tablets {
         display: none;
@@ -23,8 +23,8 @@
 }
 
 .nav__item {
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-right: rem(20px);
+    margin-bottom: rem(10px);
 
     &:last-child {
          margin-right: 0;
@@ -36,7 +36,7 @@
     white-space: nowrap;
 }
 
-.phone__number.header__phone__number {
+.phone__number.header__phone-number {
     @include tablets {
         display: none;
     }
@@ -46,13 +46,13 @@
     display: flex;
     align-items: center;
     font-weight: bold;
-    font-size: 22px;
+    font-size: rem(22px);
 }
 
 .phone-number__icon-elem {
-    width: 12px;
-    height: 12px;
-    margin-right: 5px;
+    width: rem(12px);
+    height: rem(12px);
+    margin-right: rem(5px);
 }
 
 .phone-number__icon {
