--- a/styles/scss/blocks/hero.scss
+++ b/styles/scss/blocks/hero.scss
@@ -3,10 +3,9 @@
     color: $white;
     padding-bottom: rem(68px);
 
-    // @include tablets {
-    //     background: $blue top center  no-repeat;
-    //     background-size: 100% rem(299px) !important;
-    // }
+    @include tablets {
+        background: #1968B1 url(../../img/bg-hero.png) right 20% bottom/ auto calc(100% - 90px) no-repeat;
+    }
 }
 
 .herro__title-section {
@@ -41,32 +40,36 @@
     font-weight: bold;
     font-size: rem(48px);
     text-transform: uppercase;
+    margin-bottom: rem(17px);
     line-height: 1.2;
 
     @include tablets {
-        letter-spacing: rem(-2px);
+        font-size: rem(51px);
+        padding: 0 2%;
     }
 
-    @include tablets {
-        letter-spacing: rem(2px);
-        line-height: 1;
-        font-size: rem(42px);
+    @include phones {
+        line-height: .9;
+        font-size: rem(45px);
         padding: 0 4%;
+        margin: 12px 0;
     }
 }
         
 .herro__title-desc {
     font-size: rem(21px);
-    margin-bottom: rem(27px);
+    margin-bottom: rem(39px);
 
     @include tablets {
-        padding: 0 20%;
-        margin-bottom: rem(11px);
+        font-size: rem(23px);
+        max-width: 373px;
+        margin: 0 auto;
+        margin-bottom: rem(45px);
     }
 
     @include phones {
-        padding: 0 10%;
-        margin-bottom: rem(35px);
+        font-size: rem(20px);
+        margin-bottom: rem(47px);
     }
 }
     
