--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -33,5 +33,7 @@ $z-fixef-menu: 100;
 @import "blocks/radio.scss";
 @import "blocks/fixed__menu.scss";
 @import "blocks/hamburger.scss";
+@import "blocks/map.scss";
 @import "blocks/footer.scss";
 @import "blocks/contacts.scss";
+@import "blocks/social.scss";
