--- a/styles/scss/blocks/contacts.scss
+++ b/styles/scss/blocks/contacts.scss
@@ -4,17 +4,30 @@
     color: #000;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     @include phones {
-        margin-bottom: 10px;
+        margin-bottom: 16px;
     }
 }
 
 .contacts__plase {
-    margin-bottom: 12px;
+    font-size: 21px;
+    margin-bottom: 7px;
+
+    @include phones {
+        margin-bottom: 0;
+    }
 }
 
 .phone-number__text--color--gray {
-    color: $gray;
+    font-size: 21px;
+    font-weight: normal;
+    color: #000;
+}
+
+.footer__phone-number {
+    @include phones {
+        display: flex;
+        justify-content: center;
+    }
 }
