--- a/styles/scss/blocks/footer.scss
+++ b/styles/scss/blocks/footer.scss
@@ -3,8 +3,12 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding: rem(25px);
+    padding: rem(18px);
     background: #fff;
+
+    @include tablets {
+        padding: rem(27px);
+    }
 }
 
 .footer__container {
@@ -12,5 +16,41 @@
     justify-content: center;
     align-items: center;
 
-    
+    @include phones {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
+
+.footer__col {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 50%;
+
+    @include phones {
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+.footer__col-right {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 50%;
+
+    @include phones {
+        justify-content: center;
+        width: 100%;
+    }
+}
+
+.phone-number__icon--color--dark {
+    flex-shrink: 0;
+    fill: #292929;
+    width: rem(13px); 
+    height: rem(15px);
+}
+
