--- a/styles/scss/blocks/header.scss
+++ b/styles/scss/blocks/header.scss
@@ -1,14 +1,21 @@
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     padding-top: rem(24px);
     margin-bottom: rem(65px);
+
+    @include tablets {
+        padding: rem(24px) rem(16px);
+    }
+
+    @include phones {
+        padding: rem(24px) 0;
+    }
 }
 
 .nav {
     margin: 0 rem(30px);
-    padding-top: rem(5px);
 
     @include tablets {
         display: none;
@@ -23,8 +30,7 @@
 }
 
 .nav__item {
-    margin-right: rem(20px);
-    margin-bottom: rem(10px);
+    margin-right: rem(22px);
 
     &:last-child {
          margin-right: 0;
@@ -44,7 +50,6 @@
 
 .phone__number {
     display: flex;
-    align-items: center;
     font-weight: bold;
     font-size: rem(22px);
 }
@@ -57,6 +62,9 @@
 
 .phone-number__icon {
     flex-shrink: 0;
+    fill: #fff;
+    width: 13px; 
+    height: 15px;
 }
 
 .phone-number__text {
