--- a/styles/scss/blocks/reviews.scss
+++ b/styles/scss/blocks/reviews.scss
@@ -7,6 +7,16 @@
     background: #F8FAF9;
     padding: rem(42px) rem(40px) rem(42px);
     margin-bottom: rem(5px);
+
+    @include tablets {
+        padding: rem(58px) rem(25px) rem(48px);
+        margin-bottom: rem(36px);
+     }
+
+     @include phones {
+        padding: rem(60px) rem(40px) rem(42px);
+        margin-bottom: rem(25px);
+     }
 }
 
 .reviews__display-inner {
@@ -24,26 +34,44 @@
     height: rem(270px);
 
     @include tablets {
-        max-width: rem(130px);
-        height: rem(130px);
+        max-width: rem(135px);
+        height: rem(135px);
+        margin-bottom: rem(18px);
      }
+
+    @include phones {
+        max-width: rem(140px);
+        height: rem(140px);
+        margin-bottom: rem(18px);
+    }
 }
 
 .reviews-avatar__img {
     object-fit: cover;
     max-width: 100%;
-    // height: 100%;
 }
 
 .reviews__content {
     flex: 1;
     margin-left: rem(40px);
+
+    @include tablets {
+        margin-left: 0;
+    }
 }
 
 .reviews__title {
     font-weight: bold;
     font-size: rem(27px);
     margin: rem(29px) 0 rem(16px);
+
+    @include tablets {
+        margin-bottom: rem(16px);
+     }
+
+     @include tablets {
+        margin: rem(17px) 0 rem(16px);
+     }
 }
 
 .reviews__text {
@@ -51,11 +79,25 @@
     line-height: 1.2;
     color: $gray;
     margin-bottom: rem(50px);
+
+    @include tablets {
+        margin-bottom: rem(25px);
+     }
+
+     @include phones {
+        font-size: rem(22px);
+        margin-bottom: rem(14px);
+     }
 }
 
 .reviews__author {
     font-weight: 500;
     color: #292929;
+
+    @include phones {
+        font-weight: bold;
+        font-size: rem(20px);
+     }
 }
 
 .reviews__switcher {
