--- a/styles/scss/blocks/section.scss
+++ b/styles/scss/blocks/section.scss
@@ -4,6 +4,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include phones {
+        font-size: 18px;
+    }
 }
 
 .section__title {
@@ -12,6 +16,14 @@
     margin-bottom: rem(32px);
     text-align: center;
     text-transform: uppercase;
+
+    @include tablets {
+        font-size: rem(51px);
+    }
+
+    @include phones {
+        font-size: rem(45px);
+    }
 }
 
 /**/
@@ -19,17 +31,20 @@
     text-align: center;  
     margin-bottom: rem(52px);
 
+    @include tablets {
+        margin-bottom: rem(60px);
+    }
+
     @include phones {
-        margin-bottom: rem(75px);
+        margin-bottom: rem(65px);
     }
 }
 
 .headline__title {
-    margin-bottom: rem(20px);
+    margin-bottom:rem(20px);
 
     @include phones {
-        margin-bottom: rem(5px);
-        letter-spacing: rem(-2px);
+        margin-bottom: rem(3px);
     }
 }
 
@@ -37,10 +52,16 @@
 .headline__subtitle {
     display: inline-block;
     color: #666666;
-    margin: 0 27%;
+    max-width: 436px;
+
+    @include tablets {
+        font-size: rem(18px);
+    }
 
     @include phones {
-        margin: 0 8%;
+        font-size: rem(20px);
+        line-height: 1.3;
+        margin: 0 3%;
     }
 }
 
@@ -58,7 +79,6 @@
 
 .benefits__item {
     position: relative;
-    margin-left: rem(20px);
     flex: 1;
     padding: 0 3%;
 
@@ -66,7 +86,7 @@
         display: flex;
         text-align: left;
         padding: 0;
-        margin-bottom: rem(19px);
+        margin-bottom: rem(33px);
     }
 
     &::before {
@@ -115,8 +135,8 @@
 
 .benefit__img-wrapper {
     display: inline-block;
-    width: rem(128px);
-    height: rem(128px);
+    width: rem(140px);
+    height: rem(140px);
     position: relative;
     background: #F2F5F4;
     border-radius: 50%;
@@ -136,9 +156,19 @@
     font-weight: bold;
     font-size: rem(27px);
     margin-bottom: rem(20px);
+
+    @include phones {
+        font-size: rem(30px);
+        margin: 5px 0 rem(15px);
+    }
 }
 
 .benefit__desc {
     font-weight: 300;
     color: #666666;
+
+    @include phones {
+        line-height: 1.2;
+        margin-right: 5%;
+    }
 }
